--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track {
+  background-color: aliceblue;
+  border-radius: 2px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: teal;
+  border-radius: 2px;
+}
